Fix layer priority issue where hero background image clipped over avatar

--- a/open_child_care_referral_platform/open_child_care_referral_platform/static/css/compass_detail.css
+++ b/open_child_care_referral_platform/open_child_care_referral_platform/static/css/compass_detail.css
@@ -94,6 +94,7 @@
 }
 
 .cd-hero__body {
+  position: relative;
   padding: 0 24px 22px;
 }
 
